Pieces correctly masked and aligned

--- a/games/burn/assets/css/puzzle.css
+++ b/games/burn/assets/css/puzzle.css
@@ -1,13 +1,7 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
-    background-color: #EEE;
-}
-
-#wrapper {
-    background-color: #EEE;
-}
+/**
+ * General Layout
+ * ===================================
+*/
 
 #game-header {
     background-color: #009CD6;
@@ -25,30 +19,6 @@ html, body {
     background-color: #eee;
 }
 
-#timer {
-    font-size: 30px;
-    color: black;
-}
-
-#board {
-    width: 90%;
-    display: none;
-    margin: 10px auto;
-}
-
-#level-select-container {
-    background:
-        radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.15) 30%, rgba(255,255,255,.3) 32%, rgba(255,255,255,0) 33%) 0 0,
-        radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.1) 11%, rgba(255,255,255,.3) 13%, rgba(255,255,255,0) 14%) 0 0,
-        radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.2) 17%, rgba(255,255,255,.43) 19%, rgba(255,255,255,0) 20%) 0 110px,
-        radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.2) 11%, rgba(255,255,255,.4) 13%, rgba(255,255,255,0) 14%) -130px -170px,
-        radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.2) 11%, rgba(255,255,255,.4) 13%, rgba(255,255,255,0) 14%) 130px 370px,
-        radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.1) 11%, rgba(255,255,255,.2) 13%, rgba(255,255,255,0) 14%) 0 0,
-        linear-gradient(0deg, #7DFC28 0%, #7DFC28 20%, #7DFC28 30%, #7DFC28 40%, #7DFC28 50%, #7DFC28 60%, #7DFC28 70%, #7DFC28 80%, #7DFC28 90%, #7DFC28 100%);
-    background-size: 470px 470px, 970px 970px, 410px 410px, 610px 610px, 530px 530px, 730px 730px, 100% 100%;
-    background-color: #7DFC28;
-}
-
 .contentContainer {
     padding: 1.5em .75em;
     border-radius: .5em;
@@ -58,6 +28,28 @@ html, body {
     color: #FF7985;
     text-align: center;
 }
+
+/**
+ * Puzzle Game
+ * ===================================
+*/
+
+#timer {
+    font-size: 30px;
+    color: black;
+}
+
+#board {
+    width: 90%;
+    display: none;
+    margin: 10px auto;
+    background-color: white;
+}
+
+/**
+ * Puzzle Selection
+ * ===================================
+*/
 
 #puzzle-pic-container {
     padding: 0em 0em 1em 0em;
@@ -77,6 +69,11 @@ html, body {
     cursor: pointer;
     border: 20px solid #ccc;
 }
+
+/**
+ * Level Selection
+ * ===================================
+*/
 
 #level-select-container {
     padding-bottom: 1em;
@@ -115,14 +112,10 @@ html, body {
 }
 
 
-#board {
-    background-color: blue;
-    align-items: center;
-    max-width: 50%;
-    max-height: 50%;
-    display: none;
-    color: white;
-}
+/**
+ * Finished Images
+ * ===================================
+*/
 
 .finished-img {
     height: 75%;
@@ -134,10 +127,6 @@ html, body {
     padding-bottom: 1em;
 }
 
-.hidden {
-    display: none;
-}
-
 /* Styles for mobile screen size */
 @media (min-width: 992px) and (max-width: 1200px) {
     .puzzle-img {
@@ -145,7 +134,6 @@ html, body {
         width: 225px;
         border: 10px solid #14BECC;
     }
-
 }
 
 /* Styles for mobile screen size */
@@ -155,7 +143,6 @@ html, body {
         width: 250px;
         border: 10px solid #14BECC;
     }
-
 }
 
 /* Styles for mobile screen size */
